# RPixel

./: .clang-format  .gitignore  .vimrc  CMakeLists.txt  README.md
cmake/: FindCairo.cmake
src/: CMakeLists.txt  main.cc
src/base/: CMakeLists.txt  check.h  cmdline_flags.cc  cmdline_flags.h  environment.cc  environment.h  integral_types.h  logging.cc  logging.h  macros.h  string_util.h  utils.h
src/display/: CMakeLists.txt  surface.cc  surface.h  surface_raspberry.cc
src/render/: CMakeLists.txt  logos.h  painter.cc  painter.h
